# lucyframework

./: .gitignore  README.md  pyproject.toml
src/example/: __main__.py  shared.py
src/example/scenes/: game.py  menu.py
src/lucyframework/: __init__.py  app.py  common.py  entity.py  init.py  input.py  models.py  path.py  platform.py  profiler.py  scene.py  skeletal.py
